@@ -62,12 +62,22 @@ class CLI:
                     n = networks.Networks()
                     s = n.allocateSpecificNetwork(self.commands[3], self.commands[5])
                     return io.BytesIO(s.encode("utf-8"))
+            if self.commands[2] == "-fg":
+                if len(self.commands) > 5 and self.commands[4] == "-n":
+                    n = networks.Networks()
+                    s = n.addSpecificFreeNetwork(self.commands[3], self.commands[5])
+                    return io.BytesIO(s.encode("utf-8"))
 
         if self.commands[1] == "deallocate":
             if self.commands[2] == "-g":
                 if len(self.commands) > 5 and self.commands[4] == "-n":
                     n = networks.Networks()
                     s = n.deallocateSpecificNetwork(self.commands[3], self.commands[5])
+                    return io.BytesIO(s.encode("utf-8"))
+            if self.commands[2] == "-fg":
+                if len(self.commands) > 5 and self.commands[4] == "-n":
+                    n = networks.Networks()
+                    s = n.removeSpecificFreeNetwork(self.commands[3], self.commands[5])
                     return io.BytesIO(s.encode("utf-8"))
 
         return None
